tests/negative/test_while_cond_no_r_bracket.orb
fnc main() {
    while (1>0 {}
}